--- a/css/index.css
+++ b/css/index.css
@@ -30,12 +30,13 @@
 
 html {
     scroll-behavior: smooth;
-    font-size: 16px;
+    font-size: 16px !important;
 }
 
 body {
     /* background-color: var(--space-cadet); */
     background-color: var(--black);
+    font-size: 16px !important;
 }
 
 .title {
