--- a/css/index.css
+++ b/css/index.css
@@ -100,7 +100,8 @@ p {
 }
 
 .techstack {
-    margin: 3rem 0;
+    margin: 2.5rem 0;
+    text-align: center;
 }
 
 @media screen and (max-width: 1000px) {
@@ -124,5 +125,16 @@ p {
 
     .text-block {
         width: 100%;
+    }
+
+    .title {
+        text-align: center;
+        padding: 1.5rem 0;
+    }
+    header {
+        width: 90%;
+    }
+    .flex-center {
+        justify-content: space-between;
     }
 }
