--- a/css/index.css
+++ b/css/index.css
@@ -104,7 +104,7 @@ p {
     text-align: center;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1200px) {
     .kisuke {
         height: 10rem;
         justify-self: center;
@@ -112,6 +112,9 @@ p {
     }
     .inline-flex-aboutme {
         flex-wrap: wrap;
+    }
+    main {
+        width: 90%;
     }
 }
 
